# ComfyUI-Missing-Models-Fetcher

./: .comfyignore  .gitignore  DEVELOPMENT.md  LICENSE  README.md  __init__.py  config.example.json  pyproject.toml  requirements.txt
.github/workflows/: live-e2e.yml  publish.yml  validate.yml
missing_models_fetcher/: __init__.py  config.py  credential_monitor.py  downloader.py  folders.py  nodes.py  routes.py  scanner.py  urls.py
scripts/: live_download_e2e.py  live_network_regression.py  manager_lifecycle_e2e.ps1  validate.ps1  validate_release.py
tests/: frontend_state.mjs  smoke_backend.py
web/js/: missing_models_fetcher.js  mmf_state.mjs
